--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pc-enablement-tools (1.3) xenial; urgency=medium
+
+  * add zsh
+
+ -- Alex Tu <alex.tu@canonical.com>  Thu, 25 May 2017 10:44:27 +0800
+
 pc-enablement-tools (1.2) xenial; urgency=medium
 
   * add vim, ssh as well
