--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pc-enablement-tools (1.3unstable1) unstable; urgency=medium
+
+  * for yakkety test
+
+ -- Alex Tu <alex.tu@canonical.com>  Fri, 26 May 2017 15:32:48 +0800
+
 pc-enablement-tools (1.3) xenial; urgency=medium
 
   * add zsh
